# operation-zuttomo_cli

./: .env.example  .gitignore  Cargo.toml  README.md
assets/: rimoko.aa
src/: main.rs
