[package]
name = "zuttomo-pobomofo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zuttomo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
